Fixed bug in cpp graph generation. The times are more believable now.

--- a/src/Programs/TopSort/haskell/Makefile
+++ b/src/Programs/TopSort/haskell/Makefile
@@ -1,5 +1,5 @@
 speedtest: ../../../Infrastructure/SpeedTest.hs TopSort.hs TopSortSpeedTest.hs
-	ghc ../../../Infrastructure/SpeedTest.hs TopSortSpeedTest.hs
+	ghc -O3 ../../../Infrastructure/SpeedTest.hs TopSortSpeedTest.hs
 clean:
 	rm TopSortSpeedTest *.o *.hi
 data:	
