--- a/src/Programs/TopSort/cpp/Makefile
+++ b/src/Programs/TopSort/cpp/Makefile
@@ -1,4 +1,4 @@
 all: speed_test.cc top_sort.cc
-	g++ -std=c++0x -o TopSortSpeedTest speed_test.cc top_sort.cc
+	g++ -O3 -std=c++0x -o TopSortSpeedTest speed_test.cc top_sort.cc
 clean:
 	rm TopSortSpeedTest
