--- a/src/Programs/TopSort/haskell/Makefile
+++ b/src/Programs/TopSort/haskell/Makefile
@@ -1,7 +1,8 @@
 speedtest: ../../../Infrastructure/SpeedTest.hs TopSort.hs TopSortSpeedTest.hs
 	ghc -O3 ../../../Infrastructure/SpeedTest.hs TopSortSpeedTest.hs
 clean:
-	rm TopSortSpeedTest *.o *.hi
+	rm -f TopSortSpeedTest *.o *.hi
+	rm -f ../../../Infrastructure/*.o ../../../Infrastructure/*.hi
 data:	
 	./TopSortSpeedTest > times.csv
 	
