Added data for cpp and scheme

--- a/src/Programs/TopSort/haskell/Makefile
+++ b/src/Programs/TopSort/haskell/Makefile
@@ -1,5 +1,7 @@
 speedtest: ../../../Infrastructure/SpeedTest.hs TopSort.hs TopSortSpeedTest.hs
 	ghc -O3 ../../../Infrastructure/SpeedTest.hs TopSortSpeedTest.hs
+speedtestunopt:  ../../../Infrastructure/SpeedTest.hs TopSort.hs TopSortSpeedTest.hs
+	ghc -O3 ../../../Infrastructure/SpeedTest.hs TopSortSpeedTest.hs	
 clean:
 	rm -f TopSortSpeedTest *.o *.hi
 	rm -f ../../../Infrastructure/*.o ../../../Infrastructure/*.hi
