Removed custom def of list, and using system definition

--- a/src/Programs/NQueen/haskell/Makefile
+++ b/src/Programs/NQueen/haskell/Makefile
@@ -3,7 +3,7 @@ speedtest: ../../../Infrastructure/SpeedTest.hs Nqueen.hs nqspeedtest.hs
 speedtestunopt:  ../../../Infrastructure/SpeedTest.hs Nqueen.hs nqspeedtest.hs
 	ghc ../../../Infrastructure/SpeedTest.hs nqspeedtest.hs	
 clean:
-	rm -f nqspeedtetst *.o *.hi
+	rm -f nqspeedtest *.o *.hi
 	rm -f ../../../Infrastructure/*.o ../../../Infrastructure/*.hi
 data:	
 	./nqspeedtest > times.csv
