--- a/src/Programs/CircuitSim/cpp/Makefile
+++ b/src/Programs/CircuitSim/cpp/Makefile
@@ -1,4 +1,10 @@
-build:
-	g++ -std=c++0x -I circuits/include -I sim *.cc circuits/src/*.cc sim/*.cc -o csim
+SAMPLES = samples/testbasic.cc samples/ring.cc
+EXE_OBJS = $(patsubst samples/%.cc, exe/%.out, $(SAMPLES))
+
+build: $(EXE_OBJS)
+
+exe/%.out: samples/%.cc
+	g++ -std=c++0x -I circuits/include -I sim -o $@ circuits/src/*.cc sim/*.cc $^
+
 clean:
-	rm *.o csim
+	rm exe/*;
