Final topsort versions

--- a/src/Programs/TopSort/c/Makefile
+++ b/src/Programs/TopSort/c/Makefile
@@ -1,4 +1,6 @@
-all: speed_test.cc top_sort.cc
+unopt: speed_test.cc top_sort.cc
+	g++ -O0 -std=c++0x -o TopSortSpeedTest speed_test.cc top_sort.cc
+opt: speed_test.cc top_sort.cc
 	g++ -O3 -std=c++0x -o TopSortSpeedTest speed_test.cc top_sort.cc
 clean:
 	rm TopSortSpeedTest
