--- a/src/Programs/TopSort/cpp/Makefile
+++ b/src/Programs/TopSort/cpp/Makefile
@@ -1,4 +1,7 @@
-all: speed_test.cc top_sort.cc
+.PHONY: unopt opt clean
+unopt:
+	g++ -O0 -std=c++0x -o TopSortSpeedTest speed_test.cc top_sort.cc
+opt:
 	g++ -O3 -std=c++0x -o TopSortSpeedTest speed_test.cc top_sort.cc
 clean:
 	rm TopSortSpeedTest
