Removed O0, just have default opt level

--- a/src/Programs/TopSort/c/Makefile
+++ b/src/Programs/TopSort/c/Makefile
@@ -1,6 +1,8 @@
 unopt: speed_test.cc top_sort.cc
-	g++ -O0 -std=c++0x -o TopSortSpeedTest speed_test.cc top_sort.cc
+	g++ -std=c++0x -o TopSortSpeedTest speed_test.cc top_sort.cc
 opt: speed_test.cc top_sort.cc
 	g++ -O3 -std=c++0x -o TopSortSpeedTest speed_test.cc top_sort.cc
+profunopt: speed_test.cc top_sort.cc
+	g++ -O0 -pg -std=c++0x -o TopSortSpeedTest speed_test.cc top_sort.cc
 clean:
 	rm TopSortSpeedTest
