Removed some data, added git ignore, renemd exe outputs to have exe extension at the end.

--- a/src/Programs/TopSort/haskell/Makefile
+++ b/src/Programs/TopSort/haskell/Makefile
@@ -1,12 +1,12 @@
 speedtest: ../../../Infrastructure/SpeedTest.hs TopSort.hs TopSortSpeedTest.hs
-	ghc -XFlexibleContexts -O3 ../../../Infrastructure/SpeedTest.hs TopSortSpeedTest.hs
+	ghc -XFlexibleContexts -O3 ../../../Infrastructure/SpeedTest.hs TopSortSpeedTest.hs -o TopSortSpeedTest.exe
 speedtestunopt:  ../../../Infrastructure/SpeedTest.hs TopSort.hs TopSortSpeedTest.hs
-	ghc -XFlexibleContexts ../../../Infrastructure/SpeedTest.hs TopSortSpeedTest.hs	
+	ghc -XFlexibleContexts ../../../Infrastructure/SpeedTest.hs TopSortSpeedTest.hs	-o TopSortSpeedTest.exe
 prof: ../../../Infrastructure/SpeedTest.hs TopSort.hs TopSortSpeedTest.hs
-	ghc -O3 -XFlexibleContexts -prof -fprof-auto -rtsopts ../../../Infrastructure/SpeedTest.hs ./TopSortSpeedTest.hs
+	ghc -O3 -XFlexibleContexts -prof -fprof-auto -rtsopts ../../../Infrastructure/SpeedTest.hs ./TopSortSpeedTest.hs -o TopSortSpeedTest.exe
 clean:
-	rm -f TopSortSpeedTest *.o *.hi
+	rm -f TopSortSpeedTest.exe *.o *.hi
 	rm -f ../../../Infrastructure/*.o ../../../Infrastructure/*.hi
 data:	
-	./TopSortSpeedTest > times.csv
+	./TopSortSpeedTest.exe > times.csv
 	
