--- a/src/Programs/TopSort/cpp/Makefile
+++ b/src/Programs/TopSort/cpp/Makefile
@@ -1,9 +1,9 @@
 .PHONY: unopt opt clean profunopt
 unopt:
-	g++ -std=c++0x -o TopSortSpeedTest speed_test.cc top_sort.cc
+	g++ -std=c++0x -o TopSortSpeedTest.exe speed_test.cc top_sort.cc
 opt:
-	g++ -O3 -std=c++0x -o TopSortSpeedTest speed_test.cc top_sort.cc
+	g++ -O3 -std=c++0x -o TopSortSpeedTest.exe speed_test.cc top_sort.cc
 profunopt:
-	g++ -O0 -pg -std=c++0x -o TopSortSpeedTest speed_test.cc top_sort.cc
+	g++ -O0 -pg -std=c++0x -o TopSortSpeedTest.exe speed_test.cc top_sort.cc
 clean:
-	rm TopSortSpeedTest
+	rm TopSortSpeedTest.exe
